--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-use": "^17.4.0",
+    "react-use-scroll-direction": "^0.1.0",
     "textalive-app-api": "^0.3.2",
     "zod": "^3.21.4"
   },
